# aspect-cli-legacy

./: .bazeliskrc  .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
.aspect/: config.axl
.buildkite/: pipeline.yaml
.github/workflows/: build.yaml  ci-workflows.yaml  install_snippet.sh  release.yml
bazel/: BUILD.bazel
bazel/action_cache/: BUILD.bazel  action_cache.pb.go
bazel/analysis/: BUILD.bazel  analysis_v2.pb.go
bazel/buildeventstream/: BUILD.bazel  build_event_stream.pb.go  build_event_stream.proto
bazel/command_line/: BUILD.bazel  command_line.pb.go
bazel/failure_details/: BUILD.bazel  failure_details.pb.go
bazel/flags/: BUILD.bazel  flags.pb.go
bazel/go/: BUILD.bazel  write_go_generated_source_files.bzl
bazel/include/: bats.MODULE.bazel  go.MODULE.bazel  llvm.MODULE.bazel  proto.MODULE.bazel
bazel/invocation_policy/: BUILD.bazel  invocation_policy.pb.go
bazel/options/: BUILD.bazel  option_filters.pb.go
bazel/packages_metrics/: BUILD.bazel  package_load_metrics.pb.go
bazel/query/: BUILD.bazel  build.pb.go
bazel/spawn/: BUILD.bazel  spawn.pb.go  spawn.proto
buildinfo/: BUILD.bazel  build_info_test.go
cmd/aspect/: BUILD.bazel  main.go
cmd/aspect/analyzeprofile/: BUILD.bazel  analyzeprofile.go
cmd/aspect/aquery/: BUILD.bazel  aquery.go
cmd/aspect/canonicalizeflags/: BUILD.bazel  canonicalizeflags.go
cmd/aspect/clean/: BUILD.bazel  clean.go
cmd/aspect/config/: BUILD.bazel  config.go
cmd/aspect/configure/: BUILD.bazel  configure.go  go_deps.go
cmd/aspect/coverage/: BUILD.bazel  coverage.go
cmd/aspect/cquery/: BUILD.bazel  cquery.go
cmd/aspect/docs/: BUILD.bazel  docs.go
cmd/aspect/dump/: BUILD.bazel  dump.go
cmd/aspect/fetch/: BUILD.bazel  fetch.go
cmd/aspect/help/: BUILD.bazel  flags_as_proto.go
cmd/aspect/info/: BUILD.bazel  info.go
cmd/aspect/init/: BUILD.bazel  init.go
cmd/aspect/license/: BUILD.bazel  license.go
cmd/aspect/lint/: BUILD.bazel  lint.go
cmd/aspect/mobileinstall/: BUILD.bazel  mobileinstall.go
cmd/aspect/mod/: BUILD.bazel  mod.go
cmd/aspect/outputs/: BUILD.bazel  outputs.go
cmd/aspect/print/: BUILD.bazel  print.go
cmd/aspect/printaction/: BUILD.bazel  printaction.go
cmd/aspect/query/: BUILD.bazel  query.go
cmd/aspect/root/: BUILD.bazel  root.go
cmd/aspect/run/: BUILD.bazel  run.go
cmd/aspect/shutdown/: BUILD.bazel  shutdown.go
cmd/aspect/sync/: BUILD.bazel  sync.go
cmd/aspect/test/: BUILD.bazel  test.go
cmd/aspect/vend/: BUILD.bazel  vendor.go
cmd/aspect/version/: BUILD.bazel  version.go
cmd/docgen/: BUILD.bazel  main.go
docs/: aspect_configure.md
docs/bazelrc/: BUILD.bazel
docs/plugins/: BUILD.bazel
integration_tests/: BUILD.bazel  bats.bzl  bats_deps.bzl  bazel_binary.bzl
integration_tests/aspect/: BUILD.bazel  common.bats  configure_test.bats  flags_test.bats  init_test.bats  lint_test.bats  telemetry_test.bats
patches/: BUILD.bazel  buildtools-build_proto.patch  gazelle-gitignore.patch
pkg/aspect/analyzeprofile/: BUILD.bazel  analyzeprofile.go
pkg/aspect/aquery/: BUILD.bazel  aquery.go  aquery_test.go
pkg/aspect/canonicalizeflags/: BUILD.bazel  canonicalizeflags.go
pkg/aspect/clean/: BUILD.bazel  clean.go  clean_test.go
pkg/aspect/config/: BUILD.bazel  config.go
pkg/aspect/coverage/: BUILD.bazel  coverage.go
pkg/aspect/cquery/: BUILD.bazel  cquery.go  cquery_test.go
pkg/aspect/docs/: BUILD.bazel  docs.go
pkg/aspect/dump/: BUILD.bazel  dump.go
pkg/aspect/fetch/: BUILD.bazel  fetch.go
pkg/aspect/info/: BUILD.bazel  info.go
pkg/aspect/init/: BUILD.bazel  init.go
pkg/aspect/license/: BUILD.bazel  license.go
pkg/aspect/lint/: BUILD.bazel  bep.go  diagnostic.go  diagnostic_test.go  helpers_test.go  lint.go  lint_test.go  linthandler.go  sarif_test.go
pkg/aspect/lint/diagnostic/: BUILD.bazel  noop.go
pkg/aspect/lint/testdata/golden_files/: BUILD.bazel
pkg/aspect/mobileinstall/: BUILD.bazel  mobileinstall.go
pkg/aspect/mod/: BUILD.bazel  mod.go
pkg/aspect/outputs/: BUILD.bazel  hash.go  hash_test.go  outputs.go
pkg/aspect/print/: BUILD.bazel  print.go
pkg/aspect/printaction/: BUILD.bazel  printaction.go
pkg/aspect/query/: BUILD.bazel  query.go  query_test.go
pkg/aspect/query/shared/: BUILD.bazel  query.go
pkg/aspect/root/config/: BUILD.bazel  aspect_base_url.go  config.go  config_test.go
pkg/aspect/run/: BUILD.bazel  changedetector.go  changedetector_test.go  ibazel.go  run.go  run_test.go
pkg/aspect/run/testdata/: changedetector_test-json_exec-a.json
pkg/aspect/shutdown/: BUILD.bazel  shutdown.go
pkg/aspect/sync/: BUILD.bazel  sync.go
pkg/aspect/test/: BUILD.bazel  test.go  test_test.go
pkg/aspect/vend/: BUILD.bazel  vendor.go
pkg/aspect/version/: BUILD.bazel  version.go  version_test.go
pkg/aspecterrors/: BUILD.bazel  errors.go
pkg/aspectgrpc/: BUILD.bazel
pkg/aspectgrpc/mock/: BUILD.bazel
pkg/bazel/: BUILD.bazel  bazel.go  bazel_flags.go  bazel_test.go  bazelisk-core.go  bazelisk.go
pkg/bazel/mock/: BUILD.bazel
pkg/bazel/workspace/: BUILD.bazel  finder_test.go
pkg/hints/: BUILD.bazel  hints.go
pkg/interceptors/: BUILD.bazel
pkg/ioutils/: BUILD.bazel
pkg/ioutils/cache/: BUILD.bazel
pkg/ioutils/prompt/: BUILD.bazel
pkg/osutils/filesystem/: BUILD.bazel  darwin_test.go  linux_test.go  windows.go  windows_test.go
pkg/plugin/client/: BUILD.bazel  client.go  download.go
pkg/plugin/system/: BUILD.bazel  system.go  system_test.go
pkg/plugin/types/: BUILD.bazel  plugin.go
pkg/stdlib/: BUILD.bazel
pkg/stdlib/mock/: BUILD.bazel
pkg/telemetry/: BUILD.bazel  bazel_attrs.go  bazel_attrs_test.go  setup.go
release/: BUILD.bazel  README.md  release.bzl
release/homebrew/: brew_bottle.bzl
release/homebrew/tests/: BUILD.bazel  brew_bottle_test.sh  generate_formula_test.sh
release/sha256sum/: BUILD.bazel
tools/: BUILD.bazel  preset.bazelrc  workspace_status.js
tools/format/: BUILD.bazel
tools/gazelle/: BUILD
tools/go/: BUILD.bazel
util/flags/: BUILD.bazel  set.go
(+31 files in other folders)
