module(
    name = "aspect_cli",
    version = "0.0.0",
)

bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")
bazel_dep(name = "rules_nodejs", version = "6.3.1")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "17.9.1")
use_repo(node, "nodejs_linux_amd64", "nodejs_linux_arm64")

bazel_dep(name = "aspect_rules_js", version = "2.1.2")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "9.7.0",
)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "bazel_features", version = "1.43.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# For integration testing.
# In the future, consider using this to get them:
# bazel_dep(name = "rules_bazel_integration_test", version = "0.32.1", dev_dependency = True)
bazel_binary = use_repo_rule("//integration_tests:bazel_binary.bzl", "bazel_binary")

bazel_binary(name = "bazel_6_4_0")

include("//bazel/include:go.MODULE.bazel")
include("//bazel/include:llvm.MODULE.bazel")
include("//bazel/include:proto.MODULE.bazel")
