module(
    name = "aspect_cli",
    version = "0.0.0",
)

bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "aspect_gazelle_prebuilt", version = "0.0.11")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "bazel_features", version = "1.43.0")

# Unused transitive dep (protobuf -> rules_jvm_external). Declared only to raise the
# version: <= 0.6.x fails loading under Bazel 9 when the host has an Android SDK
# (e.g. GitHub-hosted runners), via its registered @androidsdk//:all toolchains.
bazel_dep(name = "rules_android", version = "0.7.2", repo_name = None)
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# For integration testing.
# In the future, consider using this to get them:
# bazel_dep(name = "rules_bazel_integration_test", version = "0.32.1", dev_dependency = True)
bazel_binary = use_repo_rule("//integration_tests:bazel_binary.bzl", "bazel_binary")

bazel_binary(name = "bazel_6_4_0")

include("//bazel/include:go.MODULE.bazel")
include("//bazel/include:bats.MODULE.bazel")

bazel_dep(name = "llvm", version = "0.8.3")

# Exposes @rules_rs//rs/platforms/constraints:musl by apparent name for
# //platforms (toolchains are registered transitively by @aspect_gazelle_js).
bazel_dep(name = "rules_rs", version = "0.0.83")

register_toolchains("@llvm//toolchain:all")
