load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_library.bzl", "sh_library")

exports_files(["runner.sh"])

bzl_library(
    name = "bazel_binary",
    srcs = ["bazel_binary.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_lib//lib:repo_utils"],
)

sh_library(
    name = "shell",
    srcs = ["runner.sh"],
)

sh_binary(
    name = "runner",
    srcs = ["runner.sh"],
)

bzl_library(
    name = "bats",
    srcs = ["bats.bzl"],
    visibility = ["//visibility:public"],
)
