load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "write_go_generated_source_files",
    srcs = ["write_go_generated_source_files.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:copy_to_directory",
        "@bazel_lib//lib:directory_path",
        "@bazel_lib//lib:write_source_files",
    ],
)
