# LLVM toolchain required for compiling binary with cgo
bazel_dep(name = "llvm", version = "0.6.7")

toolchain = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")

# Exec platforms (machines we build from)
toolchain.exec(arch = "x86_64", os = "linux")
toolchain.exec(arch = "aarch64", os = "macos")
toolchain.exec(arch = "x86_64", os = "macos")

# Cross-compilation targets
toolchain.target(arch = "x86_64", os = "linux")
toolchain.target(arch = "aarch64", os = "linux")
toolchain.target(arch = "aarch64", os = "macos")
toolchain.target(arch = "x86_64", os = "macos")

use_repo(toolchain, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")
