load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@npm//:prettier/package_json.bzl", prettier = "bin")

package(default_visibility = ["//visibility:public"])

prettier.prettier_binary(
    name = "prettier",
    data = [
        "//:prettierrc",
    ],
    # Allow the binary to be run outside bazel
    env = {"BAZEL_BINDIR": "."},
)

format_multirun(
    name = "format",
    css = ":prettier",
    go = "@go_sdk//:bin/gofmt",
    html = ":prettier",
    javascript = ":prettier",
    jsonnet = "@aspect_rules_lint//format:jsonnetfmt",
    shell = "@aspect_rules_lint//format:shfmt",
    terraform = "@aspect_rules_lint//format:terraform",
    yaml = "@aspect_rules_lint//format:yamlfmt",
)

# Starlark-only formatter for the dedicated buildifier CI step. Lets us run
# buildifier in parallel with the multi-language `format` target while
# `aspect format --task-key=format` ignores Starlark patterns to avoid
# duplicate work. See https://docs.aspect.build/cli/migration/buildifier.
format_multirun(
    name = "format-starlark",
    starlark = "@buildifier_prebuilt//:buildifier",
)
