load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "configure",
    srcs = [
        "configure.go",
        "go_deps.go",
    ],
    importpath = "github.com/aspect-build/aspect-cli-legacy/cmd/aspect/configure",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/aspect/root/flags",
        "//pkg/aspecterrors",
        "//pkg/bazel",
        "//pkg/interceptors",
        "//pkg/ioutils",
        "@aspect_gazelle_orion",
        "@aspect_gazelle_runner",
        "@aspect_gazelle_runner//pkg/ibp",
        "@aspect_gazelle_runner//pkg/watchman",
        "@bazel_gazelle//language:go_default_library",
        "@com_github_aspect_build_aspect_gazelle_common//cache",
        "@com_github_aspect_build_aspect_gazelle_common//logger",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
