load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "license",
    srcs = ["license.go"],
    importpath = "github.com/aspect-build/aspect-cli-legacy/cmd/aspect/license",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/aspect/license",
        "//pkg/aspect/root/flags",
        "//pkg/bazel",
        "//pkg/interceptors",
        "//pkg/ioutils",
        "@com_github_spf13_cobra//:cobra",
    ],
)
