load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lint",
    srcs = [
        "bep.go",
        "diagnostic.go",
        "lint.go",
        "linthandler.go",
        "sarif.go",
    ],
    importpath = "github.com/aspect-build/aspect-cli-legacy/pkg/aspect/lint",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/buildeventstream",
        "//pkg/aspect/lint/diagnostic",
        "//pkg/aspect/root/flags",
        "//pkg/aspecterrors",
        "//pkg/bazel",
        "//pkg/bazel/workspace",
        "//pkg/ioutils",
        "//pkg/plugin/system/bep",
        "//util/flags",
        "@com_github_bluekeyes_go_gitdiff//gitdiff",
        "@com_github_charmbracelet_huh//:huh",
        "@com_github_fatih_color//:color",
        "@com_github_reviewdog_errorformat//:errorformat",
        "@com_github_reviewdog_errorformat//fmts",
        "@com_github_reviewdog_errorformat//writer",
        "@com_github_reviewdog_reviewdog//parser",
        "@com_github_sourcegraph_go_diff//diff",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_test(
    name = "lint_test",
    srcs = [
        "diagnostic_test.go",
        "helpers_test.go",
        "lint_test.go",
        "linthandler_test.go",
        "sarif_test.go",
        "statics_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":lint"],
    embedsrcs = [
        "testdata/lint_result/1_removed_line_patch.txt",
        "testdata/lint_result/1_removed_line_report.txt",
        "testdata/lint_result/3_removed_lines_patch.txt",
        "testdata/lint_result/3_removed_lines_report.txt",
        "testdata/lint_result/checkstyle_sarif.txt",
        "testdata/lint_result/clang_tidy_output.txt",
        "testdata/lint_result/different_starting_lines.txt",
        "testdata/lint_result/eslint_output.txt",
        "testdata/lint_result/imports_should_be_sorted_patch.txt",
        "testdata/lint_result/imports_should_be_sorted_report.txt",
        "testdata/lint_result/multi_issue_patch.txt",
        "testdata/lint_result/multiple_changes_same_hunk.txt",
        "testdata/lint_result/multiple_syntax_before_single_syntax_patch.txt",
        "testdata/lint_result/multiple_syntax_before_single_syntax_report.txt",
        "testdata/lint_result/removed_lines_first_patch.txt",
        "testdata/lint_result/ruff_output.txt",
        "testdata/lint_result/ruff_output_2.txt",
        "testdata/lint_result/ruff_output_2_patch.txt",
        "testdata/lint_result/ruff_output_patch.txt",
        "testdata/lint_result/shellcheck_output_1.txt",
        "testdata/lint_result/shellcheck_output_2.txt",
        "testdata/lint_result/spaced_add_grouped_remove.txt",
        "testdata/lint_result/split_removed_lines_patch.txt",
        "testdata/lint_result/stylelint_output.txt",
    ],
    deps = [
        "//pkg/aspect/lint/diagnostic",
        "//pkg/aspect/root/config",
        "//pkg/aspect/root/flags",
        "//pkg/bazel/mock",
        "//pkg/ioutils",
        "@com_github_golang_mock//gomock",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@tools_gotest_v3//golden",
    ],
)
