load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "run",
    srcs = [
        "changedetector.go",
        "ibazel.go",
        "run.go",
    ],
    embedsrcs = ["aspect_watch.bzl"],
    importpath = "github.com/aspect-build/aspect-cli-legacy/pkg/aspect/run",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/spawn",
        "//pkg/aspect/root/flags",
        "//pkg/bazel",
        "//pkg/ioutils",
        "//pkg/plugin/system/bep",
        "@aspect_gazelle//common/logger",
        "@aspect_gazelle_runner//pkg/ibp",
        "@aspect_gazelle_runner//pkg/watchman",
        "@com_github_fatih_color//:color",
        "@com_github_klauspost_compress//zstd",
        "@com_github_spf13_cobra//:cobra",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//encoding/protodelim",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "run_test",
    srcs = [
        "changedetector_test.go",
        "run_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":run"],
    embedsrcs = [
        "testdata/changedetector_test-json_exec-a.json",
        "testdata/changedetector_test-compact_exec-a.bin",
    ],
    deps = [
        "//pkg/aspecterrors",
        "//pkg/bazel/mock",
        "//pkg/ioutils",
        "//pkg/plugin/system/bep",
        "//pkg/plugin/system/bep/mock",
        "@com_github_golang_mock//gomock",
        "@com_github_onsi_gomega//:gomega",
    ],
)

bzl_library(
    name = "aspect_watch",
    srcs = ["aspect_watch.bzl"],
    visibility = ["//visibility:private"],
)
